[project]
name = "hse-hackathon"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "tqdm>=4.65.0",
    "mlflow>=2.15.0",
    "catboost>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "boto3>=1.28.0",
    "psycopg2-binary>=2.9.0",
]